--- a/css/stil.css
+++ b/css/stil.css
@@ -1,31 +1,40 @@
+body{
+	background-color:black;
+}
+
+div{
+	background-color:#ddd:
+}
 .stranica{
-	margin-left:200px;
-	margin-right:200px;
+	margin-left:100px;
+	margin-right:100px;
 	margin-bottom:10px;
 	margin-top:10px;
+	max-width:1200px;
 	
 }
 
 nav{
 	width:100%;
 	text-align: center;
+	
+
 }
 
 nav li {
 	display:inline-block;
+	font-size: 25px;
 	
 }
 
 nav ul{
 	list-style:none;
-	background-color:silver;
-	
+	background-color:#ddd;
 	text-align:center;
 	margin:0;
 }
 
 nav a{
-	
 	text-decoration:none;
 	text-align:center;
 	display: block;
@@ -35,22 +44,24 @@ nav a{
 	padding-top:15px;
 	border-bottom: 2px solid transparent;
 	color:black;
-	
 }
 
 a:hover{
-	border-bottom: 3px solid black;
-	
-	
+	border-bottom: 4px solid black;
+	border-bottom-color: #C10808;
+	color: black;
+}
+#levi{
+	width: 59%;
+	float: left;
+	background-color:#e1e1e1;
+	padding:2px;
 }
 
-div{
-	width:60%;
-	float:left;
-}
-
-.desni{
+#desni{
 	float:right;
-	width:40%;
-	
+	width:39%;
+	background-color:#e1e1e1;
+	padding:2px;
 }
+
