--- a/css/stil.css
+++ b/css/stil.css
@@ -3,7 +3,18 @@ body{
 }
 
 div{
-	background-color:#ddd:
+	background-color:#ddd;
+
+	
+	
+}
+
+a, p, h3 {
+	font-family: calibri;
+}
+a{
+	text-decoration: none;
+	
 }
 .stranica{
 	margin-left:100px;
@@ -47,21 +58,68 @@ nav a{
 }
 
 a:hover{
-	border-bottom: 4px solid black;
+	border-bottom: 2px solid;
 	border-bottom-color: #C10808;
-	color: black;
+	color: #C10808;
+	
 }
+input{
+	border: 2px solid;
+	border-color: #C10808;
+}
+
 #levi{
-	width: 59%;
+	padding:5px;
+	width: 68%;
 	float: left;
 	background-color:#e1e1e1;
-	padding:2px;
+	
 }
 
 #desni{
+	
+	padding:5px;
 	float:right;
-	width:39%;
+	width:30%;
 	background-color:#e1e1e1;
-	padding:2px;
+	
 }
 
+.prvi, .drugi{
+	height:400px;
+	border-bottom: 1px solid #C10808;
+	padding-bottom:5px;
+	padding-top: 5px;
+}
+
+.prvi img{
+	float:right;
+	
+	width:49%
+	
+}
+.prvi h3{
+	text-align:center;
+}
+.prvi p{
+	float:left;
+	text-align:center;
+	width:49%
+}
+
+.drugi img{
+	float:left;
+	width:49%
+}
+.drugi h3{
+	text-align:center;
+}
+.drugi p{
+	float:right;
+	text-align:center;
+	width:49%
+}
+
+
+
+-------------------------------------------------------------------------------
