--- a/css/stil.css
+++ b/css/stil.css
@@ -1,6 +1,3 @@
-body{
-	background-color:black;
-}
 
 div{
 	background-color:#ddd;
@@ -11,6 +8,7 @@ div{
 
 a, p, h3 {
 	font-family: calibri;
+	
 }
 a{
 	text-decoration: none;
@@ -22,6 +20,8 @@ a{
 	margin-bottom:10px;
 	margin-top:10px;
 	max-width:1200px;
+	
+	
 	
 }
 
@@ -63,16 +63,29 @@ a:hover{
 	color: #C10808;
 	
 }
+#prijava {
+	border: 2px solid black;
+	border-radius:5px;
+}
+
 input{
 	border: 2px solid;
 	border-color: #C10808;
+	margin-left:20px;
+	border-radius:5px;
 }
 
+input p{
+	
+	padding-left:20px;
+}
 #levi{
 	padding:5px;
 	width: 68%;
 	float: left;
 	background-color:#e1e1e1;
+	height:1670px;
+	
 	
 }
 
@@ -82,7 +95,19 @@ input{
 	float:right;
 	width:30%;
 	background-color:#e1e1e1;
+	height:1670px;
 	
+
+	
+}
+
+#desni p{
+	padding-left:30px;
+}
+
+#desni h1{
+	text-align:center;
+	font-family: calibri;
 }
 
 .prvi, .drugi{
@@ -120,6 +145,91 @@ input{
 	width:49%
 }
 
+button{
+	margin-left: 20px;
+	margin-top:10px;
+	border-color:#C10808;
+	margin-bottom:10px;
+	border-radius:5px;
+}
+
+#sponzori li{
+	
+	padding:28px;
+	list-style: none;
+	
+	
+}
+
+#sponzori h3{
+	text-align:center;
+	margin:auto;
+}
+
+	
+#futer{
+	color:white;
+	text-align:center;
+	margin-top:1694px;
+	margin-left:100px;
+	margin-right:100px;
+	background-color:#3D4852;
+	padding-top:15px;
+	
+	
+}
 
 
--------------------------------------------------------------------------------
+
+#futer a{
+	padding-left:20px;
+	padding-left:20px;
+	color:white;
+	font-size:50px
+}
+
+#futer a:hover{
+	color:#C10808;
+	border:none;
+	
+}
+#img2{
+	float:right;
+	padding-right:10px;
+}
+
+#img1{
+	float: left;
+	padding-left:10px;
+	
+
+}
+footer h1 {
+	font-family: calibri;
+	
+}
+
+footer p{
+	font-size:15px;
+	padding:10px;
+}
+	
+
+footer ul{
+	list-style:none;
+	text-align:center;
+	display:inline-block;
+}
+
+footer li{
+
+	display:inline-block;
+	size: 25px;
+}
+
+.stranica img{
+	border-radius:10px;
+	border: 2px solid;
+	border-color: black;
+
+}
