--- a/css/stil.css
+++ b/css/stil.css
@@ -1,30 +1,49 @@
 
 div{
 	background-color:#ddd;
-
-	
-	
 }
 
 a, p, h3 {
 	font-family: calibri;
-	
 }
+
 a{
 	text-decoration: none;
-	
 }
+
+
+
+
+
 .stranica{
 	margin-left:100px;
 	margin-right:100px;
 	margin-bottom:10px;
-	margin-top:10px;
+	margin-top:5px;
 	max-width:1200px;
-	
-	
+	height:1675px;
+	background-color:transparent;
 	
 }
 
+.stranica2{
+	margin-left:100px;
+	margin-right:100px;
+	margin-bottom:10px;
+	margin-top:5px;
+	max-width:1200px;
+	height:1675px;
+	background-color:#ddd;
+	padding:10px;
+	
+}
+
+.stranica img{
+	border-radius:10px;
+	border: 2px solid;
+	border-color: black;
+
+}
 nav{
 	width:100%;
 	text-align: center;
@@ -75,9 +94,16 @@ input{
 	border-radius:5px;
 }
 
-input p{
-	
-	padding-left:20px;
+
+
+button{
+	margin-left: 20px;
+	margin-top:10px;
+	border-color:black;
+	margin-bottom:10px;
+	border-radius:5px;
+	background-color:#C10808;
+	color: white;
 }
 #levi{
 	padding:5px;
@@ -88,7 +114,6 @@ input p{
 	
 	
 }
-
 #desni{
 	
 	padding:5px;
@@ -109,7 +134,6 @@ input p{
 	text-align:center;
 	font-family: calibri;
 }
-
 .prvi, .drugi{
 	height:400px;
 	border-bottom: 1px solid #C10808;
@@ -145,13 +169,6 @@ input p{
 	width:49%
 }
 
-button{
-	margin-left: 20px;
-	margin-top:10px;
-	border-color:#C10808;
-	margin-bottom:10px;
-	border-radius:5px;
-}
 
 #sponzori li{
 	
@@ -166,11 +183,9 @@ button{
 	margin:auto;
 }
 
-	
 #futer{
 	color:white;
 	text-align:center;
-	margin-top:1694px;
 	margin-left:100px;
 	margin-right:100px;
 	background-color:#3D4852;
@@ -225,11 +240,4 @@ footer li{
 
 	display:inline-block;
 	size: 25px;
-}
-
-.stranica img{
-	border-radius:10px;
-	border: 2px solid;
-	border-color: black;
-
 }
