--- a/css/stil.css
+++ b/css/stil.css
@@ -1,14 +1,12 @@
 body {
-    
-    
 background-attachment: fixed;
 }
 
 div{
-	background-color:#ddd;
+	background-color:#e1e1e1;
 }
 
-a, p, h3, h4 {
+a, p, h3, h4, h2 {
 	font-family: calibri;
 	
 }
@@ -18,9 +16,6 @@ a{
 }
 
 
-header , nav {
-	background-attachment: fixed;
-}
 
 
 .stranica{
@@ -44,7 +39,11 @@ header , nav {
 	padding:10px;
 	text-align:center;
 	font-family: calibri;
+	font-size:20px;
+	
 }
+
+
 
 .stranica2 h1{
 	color: #C10808;
@@ -71,7 +70,7 @@ nav li {
 
 nav ul{
 	list-style:none;
-	background-color:#ddd;
+	background-color:#e1e1e1;
 	text-align:center;
 	margin:0;
 }
@@ -98,9 +97,11 @@ form {
 	border: 2px solid black;
 	border-radius:5px;
 	padding-left:10px;
+	
 
 	
 }
+
 
 input{
 	border: 2px solid;
@@ -112,7 +113,7 @@ input{
 
 
 button{
-	
+	padding:5px;
 	margin-top:5px;
 	border-color:black;
 	margin-bottom:10px;
@@ -261,3 +262,11 @@ footer li{
 	display:inline-block;
 	size: 25px;
 }
+
+#mala:hover{
+	border-color: #C10808;
+	
+}
+
+
+	
